Test 1 - at 1500px width, add margin to icon. This is to avoid it overlapping the scrollbar

--- a/frontend/src/pages/chat/Chat.module.css
+++ b/frontend/src/pages/chat/Chat.module.css
@@ -479,6 +479,12 @@ a {
   margin: 0px;
 }
 
+@media (min-width: 1500px) {
+  .chatIcon{
+      margin-right: 200px;
+  }
+  }
+
 @media (max-width: 680px){
   .chatEmptyStateTitle{
       font-size: 40px;
